# React-Motion

./: .env.local.sample  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  index.html  manifest.json  package-lock.json  package.json  react-motion.css  task.md  vite.config.ts
sample-project/DeepAnalyze-main/demo/jupyter/: .env.example  .gitignore  CLI.py  README.md  README_ZH.md  config.toml  mcp_tools.py  pyproject.toml  server.py  utils.py
sample-project/DeepAnalyze-main/demo/jupyter/prompt/: general.md  index.json
sample-project/DeepAnalyze-main/demo/jupyter/test/: mock_server.py
sample-project/PPTAgent-2.0.0/deeppresenter/: README.md  pyproject.toml
sample-project/PPTAgent-2.0.0/deeppresenter/deeppresenter/: __init__.py  config.yaml  main.py  mcp.json
sample-project/PPTAgent-2.0.0/deeppresenter/deeppresenter/agents/: agent.py  design.py  env.py  pptagent.py  research.py
sample-project/PPTAgent-2.0.0/deeppresenter/deeppresenter/roles/: Design.yaml  PPTAgent.yaml  Research.yaml
sample-project/PPTAgent-2.0.0/deeppresenter/deeppresenter/tools/: any2markdown.py  appcore.py  fetch.py  firecrawl_search.py  research.py  richfile.py  server.py  task.py  tavily_search.py  tool_agents.py
sample-project/PPTAgent-2.0.0/deeppresenter/deeppresenter/utils/: __init__.py  config.py  constants.py  log.py  mcp_client.py  mineru_api.py  typings.py  webview.py
sample-project/PPTAgent-2.0.0/deeppresenter/docker/: Dockerfile  build.sh  config.json  server.ts
sample-project/PPTAgent-2.0.0/pptagent/: DOC.md  MANIFEST.in  README.md  pyproject.toml
sample-project/PPTAgent-2.0.0/pptagent/docker/: Dockerfile  launch.sh
sample-project/PPTAgent-2.0.0/pptagent/pptagent/: __init__.py  model_utils.py  ppteval.py
sample-project/PPTAgent-2.0.0/pptagent/scripts/: template_induct.py
sample-project/PPTAgent-2.0.0/pptagent/test/: conftest.py  test.pptx  test_apis.py  test_document.py  test_induct.py  test_llm.py  test_model_utils.py  test_multimodal.py  test_pptgen.py  test_presentation.py  test_utils.py
sample-project/goose-1.27.2/: AGENTS.md  BUILDING_DOCKER.md  BUILDING_LINUX.md  CONTRIBUTING.md  CONTRIBUTING_RECIPES.md  CUSTOM_DISTROS.md  Cargo.toml  Cross.toml  Dockerfile  GOVERNANCE.md  HOWTOAI.md  Justfile  MAINTAINERS.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  SECURITY.md  deny.toml  download_cli.ps1  download_cli.sh  flake.nix  goose-self-test.yaml  test_acp_client.py
sample-project/goose-1.27.2/crates/goose/: Cargo.toml  canonical_mapping_report.json
sample-project/goose-1.27.2/crates/goose-acp/: Cargo.toml  acp-meta.json  acp-schema.json
sample-project/goose-1.27.2/crates/goose-acp-macros/: Cargo.toml
sample-project/goose-1.27.2/crates/goose-acp-macros/src/: lib.rs
sample-project/goose-1.27.2/crates/goose-acp/src/: adapters.rs  custom_requests.rs  lib.rs  server.rs  server_factory.rs  transport.rs
sample-project/goose-1.27.2/crates/goose-acp/tests/: custom_requests_test.rs  server_test.rs
sample-project/goose-1.27.2/crates/goose-cli/: Cargo.toml  WEB_INTERFACE.md
sample-project/goose-1.27.2/crates/goose-cli/src/: cli.rs  lib.rs  logging.rs  main.rs  project_tracker.rs
sample-project/goose-1.27.2/crates/goose-cli/static/: index.html  script.js
sample-project/goose-1.27.2/crates/goose-mcp/: Cargo.toml  README.md
sample-project/goose-1.27.2/crates/goose-mcp/examples/: mcp.rs
sample-project/goose-1.27.2/crates/goose-mcp/src/: lib.rs  mcp_server_runner.rs  subprocess.rs
sample-project/goose-1.27.2/crates/goose-server/: ALLOWLIST.md  Cargo.toml
sample-project/goose-1.27.2/crates/goose-test/: Cargo.toml
sample-project/goose-1.27.2/crates/goose-test-support/: Cargo.toml
sample-project/goose-1.27.2/crates/goose/src/: lib.rs  (+18 more)
sample-project/goose-1.27.2/documentation/: .gitignore  AGENTS.md  README.md  docusaurus.config.ts  package-lock.json  package.json
sample-project/goose-1.27.2/documentation/automation/: README.md
sample-project/goose-1.27.2/documentation/blog/: README.md  authors.yml
sample-project/goose-1.27.2/documentation/docs/: quickstart.md
sample-project/goose-1.27.2/documentation/plugins/: custom-webpack.cjs  markdown-export.cjs
sample-project/goose-1.27.2/documentation/scripts/: community_stars.py  community_stars_teams.txt  generate-docs-map.js  generate-docs-map.test.js  generate-skills-manifest.js  generate-skills-zips.js  serve-static.js  verify-build.sh
sample-project/goose-1.27.2/documentation/static/: servers.json
sample-project/goose-1.27.2/evals/open-model-gym/: .gitignore  Justfile  README.md  config.yaml
sample-project/goose-1.27.2/examples/: frontend_tools.py
sample-project/goose-1.27.2/recipe-scanner/: Dockerfile  base_recipe.yaml  config.yaml  decode-training-data.py  scan-recipe.sh
sample-project/goose-1.27.2/scripts/: README.md  check-no-native-tls.sh  check-openapi-schema.sh  clean-gh-pages.sh  diagnostics-viewer.py  goose-db-helper.sh  pre-release.sh  run-benchmarks.sh  test_compaction.sh  test_mcp.sh  test_providers.sh  test_providers_code_exec.sh  test_providers_lib.sh  test_subrecipes.sh
sample-project/goose-1.27.2/scripts/bench-postprocess-scripts/: prepare_aggregate_metrics.py
sample-project/goose-1.27.2/scripts/provider-error-proxy/: README.md  proxy.py  pyproject.toml
sample-project/goose-1.27.2/scripts/test-subrecipes-examples/: project_analyzer.yaml  project_analyzer_parallel.yaml
sample-project/goose-1.27.2/services/ask-ai-bot/: .dockerignore  .env.example  .gitignore  Dockerfile  index.ts  package.json
sample-project/goose-1.27.2/ui/acp/: generate-schema.ts  package-lock.json  package.json
sample-project/goose-1.27.2/ui/desktop/: .gitignore  README.md  entitlements.plist  eslint.config.js  forge.config.ts  forge.deb.desktop  forge.rpm.desktop  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.main.config.mts  vite.renderer.config.mts  vitest.config.ts  vitest.integration.config.ts
sample-project/goose-1.27.2/ui/text/: README.md  package-lock.json  package.json  tsconfig.json
(+2116 files in other folders)
