[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.27.2"
authors = ["Block <ai-oss-tools@block.xyz>"]
license = "Apache-2.0"
repository = "https://github.com/block/goose"
description = "An AI agent"

[workspace.lints.clippy]
uninlined_format_args = "allow"
string_slice = "warn"

[workspace.dependencies]
rmcp = { version = "0.16", features = ["schemars", "auth"] }
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5.0"
dotenvy = "0.15"
env-lock = "1.0.1"
etcetera = "0.11.0"
fs2 = "0.4"
futures = "0.3"
http = "1.0"
ignore = "0.4.25"
include_dir = "0.7.4"
indoc = "2.0"
lru = "0.16"
once_cell = "1.20"
rand = "0.8"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["multipart", "form"] }
schemars = { default-features = false, version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = "0.6.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
urlencoding = "2.1"
utoipa = "4.1"
uuid = { version = "1.11", features = ["v4"] }
webbrowser = "1.0"
which = "8.0.0"
wiremock = "0.6"
serial_test = "3.2.0"
test-case = "3.3.1"
url = "2.5.8"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["metrics"] }
opentelemetry-otlp = "0.31"
opentelemetry-appender-tracing = "0.31"
opentelemetry-stdout = { version = "0.31", features = ["trace", "metrics", "logs"] }
tracing-opentelemetry = "0.32"

rayon = "1.10"
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"

[patch.crates-io]
v8 = { path = "vendor/v8" }
