[package]
name = "goose-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[[bin]]
name = "goose"
path = "src/main.rs"

[[bin]]
name = "generate_manpages"
path = "src/bin/generate_manpages.rs"

[dependencies]
clap_mangen = "0.2.31"
goose = { path = "../goose", default-features = false }
goose-acp = { path = "../goose-acp", default-features = false }
goose-mcp = { path = "../goose-mcp" }
rmcp = { workspace = true }
clap = { workspace = true }
cliclack = "0.3.5"
console = "0.16.1"
uuid = { workspace = true }
dotenvy = { workspace = true }
bat = { version = "0.26.1", default-features = false, features = ["regex-onig"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
etcetera = { workspace = true }
rand = { workspace = true }
rustyline = "15.0.0"
tracing = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = { workspace = true }
shlex = "1.3.0"
async-trait = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
tar = "0.4"
reqwest = { workspace = true, features = ["blocking", "rustls"], default-features = false }
zip = { version = "^8.0", default-features = false, features = ["deflate"] }
bzip2 = "0.5"
# Web server dependencies
axum = { workspace = true, features = ["ws", "macros"] }
tower-http = { workspace = true, features = ["cors", "fs", "auth"] }
http = { workspace = true }
webbrowser = { workspace = true }
indicatif = "0.18.1"
tokio-util = { workspace = true, features = ["compat", "rt"] }
anstream = "0.6.18"
open = "5.3.2"
url = { workspace = true }
urlencoding = { workspace = true }
clap_complete = "4.5.62"
comfy-table = "7.2.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincred"] }

[features]
default = ["code-mode"]
code-mode = ["goose/code-mode", "goose-acp/code-mode"]
# disables the update command
disable-update = []

[dev-dependencies]
tempfile = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true }
